--- a/.github/workflows/bump-everywhere.yml
+++ b/.github/workflows/bump-everywhere.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: do the bump
         uses: undergroundwires/bump-everywhere@master
-        with:
+        # with:
           # Repository name with owner to bump & release. For example, undergroundwires/bump-everywhere
           # (Optional) Default: ${{ github.repository  }}
           # repository: ''
