--- a/.github/workflows/bump-everywhere.yml
+++ b/.github/workflows/bump-everywhere.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: do the bump
         uses: undergroundwires/bump-everywhere@master
-        # with:
+        with:
           # Repository name with owner to bump & release. For example, undergroundwires/bump-everywhere
           # (Optional) Default: ${{ github.repository  }}
           # repository: ''
@@ -25,7 +25,7 @@ jobs:
 
           # Commit message that will be used in the bump commit
           # (Optional) Default: ⬆️ bump everywhere to {{version}}
-          # commit-message: ''
+          commit-message: 'bumping version'
 
           # Personal access token (PAT) used to clone & push to the repository.
           # If you use default, it'll not trigger other actions, but your own PAT then it triggers new actions
