removed git sign

--- a/.github/workflows/dev-pr-close.yml
+++ b/.github/workflows/dev-pr-close.yml
@@ -33,8 +33,8 @@ jobs:
         run: npm version patch
       - name: Git sign last commit
         run: git commit --amend --no-edit -S
-      - name: Git push version bump
-        run: git push origin master --follow-tags --force
+      # - name: Git push version bump
+      #   run: git push origin master --follow-tags --force
       - id: set-version
         name: Output version change
         run: npm pkg get version
