--- a/.github/workflows/dev-pr-close.yml
+++ b/.github/workflows/dev-pr-close.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Apply version bump (patch)
         if: contains(github.event.pull_request.labels.*.name, 'patch')
         run: npm version patch
-      - name: Git sign last commit
-        run: git commit --amend --no-edit -S
-      # - name: Git push version bump
-      #   run: git push origin master --follow-tags --force
+      # - name: Git sign last commit
+      #   run: git commit --amend --no-edit -S
+      - name: Git push version bump
+        run: git push origin master --follow-tags --force
       - id: set-version
         name: Output version change
         run: npm pkg get version
