--- a/.github/workflows/dev-pr-open.yml
+++ b/.github/workflows/dev-pr-open.yml
@@ -14,3 +14,7 @@ jobs:
         with:
           message: Please set a versioning label of either `major`, `minor`, or `patch` to the pull request.
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions-ecosystem/action-add-labels@v1
+        if: ! (contains(github.event.pull_request.labels.*.name, 'patch') || contains(github.event.pull_request.labels.*.name, 'minor') || contains(github.event.pull_request.labels.*.name, 'major'))
+        with:
+          labels: patch
