--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -27,9 +27,9 @@ jobs:
     steps:
       - name: print inputs
         run: |
-          echo ">>> road >>>> "
-          echo ${{ github.event.inputs.road }}
-          echo ${{ fromJSON(github.event) }}
+          echo ">>> road >>>>"
+# echo ${{ github.event.inputs.road }}
+# echo ${{ fromJSON(github.event) }}
 
 # - name: web-post-deployment-cycle
 #   if:  ${{ github.event.inputs.road == '' ||  matrix.road == github.event.inputs.road }}
