--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -28,7 +28,7 @@ jobs:
       - name: print inputs
         run: |
           echo ">>> road >>>>"
-          echo ${{ github.event }}
+          echo ${{ JSON.stringify(github.event) }}
 # echo ${{ github.event.inputs.road }}
 
 # - name: web-post-deployment-cycle
