--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -22,7 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        road: [ap53,ruta27,ruta160]
+        road: (${{ github.event.inputs }} && [got, an_input]) || ['no', 'inputs']
+        # road: [ap53,ruta27,ruta160]
       max-parallel: 1
     steps:
       - name: print inputs
