--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -22,13 +22,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        road: ${{ (github.event.inputs && [got, an_input]) || ['no', 'inputs']}}
+        road: [ap53,ruta27,ruta160]
+        input_road: [github.event.inputs && github.event.inputs.road]
+        # road: ${{ (github.event.inputs && [got, an_input]) || ['no', 'inputs']}}
         # road: [ap53,ruta27,ruta160]
       max-parallel: 1
     steps:
       - name: print inputs
         run: |
-          echo "matrix: ${{ matrix.road }}"
+          echo "matrix: ${{ matrix.road }}, ${{ matrix.input_road }}"
           echo ">>> inputs >>>>"
           echo "${{ (github.event.inputs && toJson(github.event.inputs)) || 'no inputs!' }}"
 # echo ">>> evesson(github.event) }}"
