--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         road: [ap53,ruta27,ruta160]
-# input_road: ${{ fromJson(github.event.inputs.input_road) }}
+        input_road: ${{ fromJson(github.event.inputs.input-road) }}
 # input_road: [${{ github.event.inputs && fromJson(github.event.inputs.road) }}]
 # road: ${{ (github.event.inputs && [got, an_input]) || ['no', 'inputs']}}
 # road: [ap53,ruta27,ruta160]
