--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -18,14 +18,25 @@ on:
         default: "['abc', 'xyz']"
 
 jobs:
+  set-matrix:
+    runs-on: ubuntu-20.04
+    outputs:
+      matrix: ${{steps.get-road.outputs.matrix}}
+    steps:
+      - uses: actions/checkout@v2
+      - id: get-road
+        run: echo "::set-output name=matrix::[abc]"
+
   run-cycle-post-deployment:
     env:
       GH_TOKEN: ${{ secrets.VLN_GH_TOKEN }}
     runs-on: ubuntu-latest
+    needs: set-matrix
     strategy:
       matrix:
-        road: [ap53,ruta27,ruta160]
-        input_road: ${{ fromJson((github.event.inputs.road && fromJson(github.event.inputs.road)) || '["me_so_empty"]') }}
+        road: [xxx, yyy]
+        input_road: ${{fromJson(needs.set-matrix.outputs.matrix)}}
+# input_road: ${{ fromJson((github.event.inputs.road && fromJson(github.event.inputs.road)) || '["me_so_empty"]') }}
 # input_road: ${{ fromJson(github.event.inputs.input-road || '["me_so_empty"]') }}
 # input_road: [${{ github.event.inputs && fromJson(github.event.inputs.road) }}]
 # road: ${{ (github.event.inputs && [got, an_input]) || ['no', 'inputs']}}
