--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -24,7 +24,7 @@ jobs:
       matrix: ${{steps.get-road.outputs.matrix}}
     steps:
       - id: get-road
-        run: echo "::set-output name=matrix::'[\"abc\"]'"
+        run: echo "::set-output name=matrix::[\"abc\"]"
 
   run-cycle-post-deployment:
     env:
