--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -14,8 +14,6 @@ on:
         - ruta160
         - ruta27
         - miro
-      input-road:
-        default: "['abc', 'xyz']"
 
 jobs:
   set-matrix:
@@ -23,8 +21,13 @@ jobs:
     outputs:
       matrix: ${{steps.get-road.outputs.matrix}}
     steps:
+      - name: print input
+        run: |
+          echo "${{ (github.event.inputs && toJson(github.event.inputs)) || 'no inputs!' }}"
       - id: get-road
-        run: echo "::set-output name=matrix::[\"abc\", \"def\", \"${{(github.event.inputs && github.event.inputs.road) || 'lala'}}\"]"
+        run: echo "::set-output name=matrix::${{(github.event.inputs && github.event.inputs.road && [\"${{github.event.inputs.road}}\"]) || '[\"nothing\"]'}}
+        # [\"abc\", \"def\", \"${{(github.event.inputs && github.event.inputs.road) || 'lala'}}\"]"
+        # run: echo "::set-output name=matrix::[\"abc\", \"def\", \"${{(github.event.inputs && github.event.inputs.road) || 'lala'}}\"]"
 
   run-cycle-post-deployment:
     env:
