--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -26,7 +26,7 @@ jobs:
           echo "${{ (github.event.inputs && toJson(github.event.inputs)) || 'no inputs!' }}"
           echo "${{github.event.inputs && github.event.inputs.road}}"
       - id: get-road
-        run: echo "::set-output name=matrix::[\"${{github.event.inputs.road}}\"]"
+        run: echo "::set-output name=matrix::${{(github.event.inputs.road || [\"${{github.event.inputs.road}}\"])}}"
         # run: echo "::set-output name=matrix::${{(github.event.inputs && github.event.inputs.road && '[\"${{github.event.inputs.road}}\"]') || '[\"nothing\"]'}}"
         # [\"abc\", \"def\", \"${{(github.event.inputs && github.event.inputs.road) || 'lala'}}\"]"
         # run: echo "::set-output name=matrix::[\"abc\", \"def\", \"${{(github.event.inputs && github.event.inputs.road) || 'lala'}}\"]"
